# codesentinel-ai

./: .gitignore  README.md  docker-compose.yml
ai-engine/: .env.example  Dockerfile  pyproject.toml
ai-engine/app/: __init__.py  main.py
ai-engine/app/agents/: code_analyzer.py  explanation_agent.py  fix_generator.py  reviewer.py  security_agent.py
ai-engine/app/llm/: client.py
ai-engine/app/models/: schemas.py  state.py
ai-engine/app/rag/: owasp_loader.py  vector_store.py
ai-engine/app/workflows/: security_review.py
ai-engine/codesentinel_ai_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
ai-engine/tests/: test_agents.py  test_rag.py
backend-spring/: Dockerfile  pom.xml
backend-spring/src/main/java/com/codesentinel/: CodeSentinelApplication.java
backend-spring/src/main/java/com/codesentinel/config/: AsyncConfig.java  WebClientConfig.java
backend-spring/src/main/java/com/codesentinel/controller/: ReviewController.java  WebhookController.java
backend-spring/src/main/java/com/codesentinel/dto/: AiAnalysisRequestDTO.java  AiAnalysisResponseDTO.java  ReviewResultDTO.java  VulnerabilityDTO.java  WebhookPayloadDTO.java
backend-spring/src/main/java/com/codesentinel/model/: DetectionSource.java  PullRequestEvent.java  ReviewResult.java  ReviewStatus.java  Severity.java  Vulnerability.java
backend-spring/src/main/java/com/codesentinel/repository/: PullRequestEventRepository.java  ReviewResultRepository.java  VulnerabilityRepository.java
backend-spring/src/main/resources/: application.yml
frontend/: app.js  index.html  styles.css
(+10 files in other folders)
